--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  list-style: disc;
+  --padding: 1rem;
+  --color: hsl(217, 50%, 50%);
+  --hover: hsl(217, 50%, 60%);
+  --input: hsl(217, 50%, 60%);
+  --input-focus: hsl(357, 50%, 60%);
+  --focus: hsl(357, 50%, 50%);
+  --outline-color: black;
+  --outline-hover: hsl(200, 50%, 90%);
+  padding: 1px;
+  margin: 1px;
+}
+
 .App {
   text-align: center;
 }
@@ -13,21 +29,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -38,5 +39,45 @@
 }
 
 .item-list {
-  display: inline
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr .5fr;
+  align-items: flex-start;
+  border: 1px solid #777;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
+}
+
+.item-list p {
+  /* border-bottom: 1px solid #777; */
+  box-shadow: 2px 0 5px 0 rgba(0, 0, 0, .2);
+}
+
+.item-list h5 {
+  font-size: 1rem;
+  border: 2px solid #777;
+  border-bottom: .2rem solid black;
+}
+
+.shopping-list {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  align-items: flex-start;
+  border: 2px solid #777;
+  box-shadow: 0 2px 5px 0 rgba(0, 0,  0, .2);
+}
+
+.shopping-list h5 {
+  font-size: 1rem;
+  border: 2px solid #777;
+  border-bottom: .2rem solid black;
+}
+
+.shopping-list p {
+  /* border-bottom: 1px solid #777; */
+  box-shadow: 2px 0 5px 0 rgba(0, 0, 0, .2);
+}
+
+.form {
+  display: grid;
+  grid-template-rows: auto;
+  align-items: center;
 }
