Styling changes to buttons

--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,14 @@
   }
 }
 
+.sign-in {
+  margin-bottom: 2rem;
+}
+
 .button-main {
   font-family: 'Pathway Gothic One', sans-serif;
   font-size: 1.5rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
 }
 
 .item-list {
@@ -57,6 +62,7 @@
   align-items: stretch;
   border: 1px solid #777;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
+  margin-bottom: 2rem;
 }
 
 .item-list p {
@@ -81,7 +87,7 @@
 }
 
 .shopping-list h5 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   border: 2px solid #777;
   border-bottom: .2rem solid black;
 }
@@ -98,15 +104,18 @@
 
 button {
   font-family: 'Sawarabi Gothic', sans-serif;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
 }
 
 h3, h5 {
-  font-family: 'Patrick Hand', cursive;
+  /* font-family: 'Patrick Hand', cursive; */
+  font-family: 'Shadows Into Light', cursive;
   font-size: 2rem;
 }
 
 p {
-  font-family: 'Shadows Into Light', cursive;
+  /* font-family: 'Shadows Into Light', cursive; */
+  font-family: 'Patrick Hand', cursive;
   font-size: 1.5rem;
   font-weight: bold;
 }
