--- a/src/App.css
+++ b/src/App.css
@@ -46,14 +46,25 @@
   }
 }
 
+.app {
+  background-color: #83c5be;
+  
+}
+
 .sign-in {
   margin-bottom: 2rem;
+  background-color: #83c5be;
 }
 
 .button-main {
   font-family: 'Pathway Gothic One', sans-serif;
   font-size: 1.5rem;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
+  background-color: #E29578;
+}
+
+.item-master {
+  background-color: #EDF6F9;
 }
 
 .item-list {
@@ -63,6 +74,7 @@
   border: 1px solid #777;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
   margin-bottom: 2rem;
+  background-color: #FFDDD2;
 }
 
 .item-list p {
@@ -76,6 +88,7 @@
   font-size: 1.5rem;
   border: 2px solid #777;
   border-bottom: .2rem solid black;
+  background-color: #83c5be;
 }
 
 .shopping-list {
@@ -90,11 +103,13 @@
   font-size: 1.5rem;
   border: 2px solid #777;
   border-bottom: .2rem solid black;
+  background-color: #83c5be;
 }
 
 .shopping-list p {
   /* border-bottom: 1px solid #777; */
   box-shadow: 2px 0 5px 0 rgba(0, 0, 0, .2);
+  background-color: #96616B;
 }
 
 .form, .form input {
@@ -105,6 +120,8 @@
 button {
   font-family: 'Sawarabi Gothic', sans-serif;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
+  background-color: #006D77;
+  color: white;
 }
 
 h3, h5 {
